# textX-dev

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  install-all-dev.sh  install-dev.sh  pyproject.toml  runtests.sh  setup.cfg  setup.py
tests/cli/: .gitignore  test_check.py  test_discovery.py  test_generate.py  test_startproject.py  test_version.py
tests/generators/: test_textx_generators.py
textxdev/: generators.py
textxdev/cli/: startproject.py
textxdev/scaffold/: __init__.py  project.que
textxdev/scaffold/template/: .travis.yml.j2  CHANGELOG.md.j2  LICENSE.jinja  README.md.j2  README.md.jinja  pyproject.toml.jinja  runtests.sh.jinja  setup.cfg.j2  setup.cfg.jinja  setup.py.j2  setup.py.jinja
textxdev/scaffold/template/.github/workflows/: ci-linux-ubuntu.yml.jinja
textxdev/scaffold/template/__gen____package__/: __init__.py  __init__.py.j2  __init__.py.jinja
textxdev/scaffold/template/__lang____package__/: __init__.py  __init__.py.j2
