[metadata]
name = textX-dev
author = Igor R. Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = Development tools for textX
keywords = parser, meta-language, meta-model, language, DSL
url = https://github.com/textX/textX-dev
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = textxdev, textxdev.cli
zip_safe = False
install_requires =
    textX
    textx-gen-que-txproject
    click
include_package_data = True
package_dir =
    textxdev = textxdev
setup_requires = setuptools_scm;

[options.extras_require]
dev =
    textx-dev
    mkdocs
    mike
test =
     flake8
     tox
     coverage
     coveralls
     pytest

[options.entry_points]
console_scripts = 
    textx = textxdev.cli:textx

textx_commands = 
    version = textxdev.cli.version:version
    list_languages = textxdev.cli.discover:list_languages
    list_generators = textxdev.cli.discover:list_generators
    generate = textxdev.cli.generate:generate
    check = textxdev.cli.check:check

textx_generators =
    textx_dot = textxdev.generators:metamodel_generate_dot
    any_dot = textxdev.generators:model_generate_dot
    textx_plantuml = textxdev.generators:metamodel_generate_plantuml

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*