[metadata]
name = textX-dev
author = Igor R. Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = Development tools for textX
keywords = parser, meta-language, meta-model, language, DSL
url = https://github.com/textX/textX-dev
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = textxdev, textxdev.cli, textxdev.scaffold
zip_safe = False
install_requires =
    textX
    textx-lang-questionnaire
    click
    appdirs
    jinja2
include_package_data = True
package_dir =
    textxdev = textxdev

[options.extras_require]
dev =
    wheel
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.entry_points]
textx_commands = 
    startproject = textxdev.cli.startproject:startproject

textx_generators =
    que_txproject = textxdev.scaffold:que_gen_txproject

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, dist/*, build/*, venv/*